RESOLVED FIXED185821
Fix FrameLoader build without video
https://bugs.webkit.org/show_bug.cgi?id=185821
Summary Fix FrameLoader build without video
Olivier Blin
Reported 2018-05-21 09:52:37 PDT
Regression(r231392): Release assert in ScriptController::canExecuteScripts via HTMLMediaElement::~HTMLMediaElement() https://bugs.webkit.org/show_bug.cgi?id=185288 ../../Source/WebCore/loader/FrameLoader.cpp:818:9: error: incomplete type 'WebCore::HTMLMediaElement' named in nested name specifier if (HTMLMediaElement::isRunningDestructor()) { ^~~~~~~~~~~~~~~~~~ ../../Source/WebCore/dom/Document.h:130:7: note: forward declaration of 'WebCore::HTMLMediaElement'
Attachments
Patch (1.70 KB, patch)
2018-05-21 09:56 PDT, Olivier Blin
no flags
Olivier Blin
Comment 1 2018-05-21 09:56:00 PDT
WebKit Commit Bot
Comment 2 2018-05-21 10:50:09 PDT
Comment on attachment 340855 [details] Patch Clearing flags on attachment: 340855 Committed r232019: <https://trac.webkit.org/changeset/232019>
WebKit Commit Bot
Comment 3 2018-05-21 10:50:11 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2018-05-21 10:52:51 PDT
Note You need to log in before you can comment on or make changes to this bug.