Fix FrameLoader build without video https://bugs.webkit.org/show_bug.cgi?id=185821

Patch by Olivier Blin <olivier.blin@softathome.com> on 2018-05-21
Reviewed by Michael Catanzaro.

Regression(r231392): Release assert in ScriptController::canExecuteScripts via HTMLMediaElement::~HTMLMediaElement()
https://bugs.webkit.org/show_bug.cgi?id=185288

No new tests, build fix only.

* loader/FrameLoader.cpp:
(WebCore::FrameLoader::checkCompleted): Flag HTMLMediaElement::isRunningDestructor() usage.

Canonical link: https://commits.webkit.org/201278@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232019 268f45cc-cd09-0410-ab3c-d52691b4dbfc