Source/WebCore/loader/FrameLoader.cpp
@@ -814,12 +814,14 @@ void FrameLoader::checkCompleted()
     if (m_isComplete)
         return;
     
+#if ENABLE(VIDEO)
     // FIXME: Remove this code once https://webkit.org/b/185284 is fixed.
     if (HTMLMediaElement::isRunningDestructor()) {
         ASSERT_NOT_REACHED();
         scheduleCheckCompleted();
         return;
     }
+#endif
 
     // FIXME: It would be better if resource loads were kicked off after render tree update (or didn't complete synchronously).
     //        https://bugs.webkit.org/show_bug.cgi?id=171729
